samples/_failures_safe/1761316277_e95d6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0ccec73.c: In function ‘main’:
./samples/SAFE/__tmp_f0ccec73.c:152:16: error: expected ‘:’ at end of input
  152 |         default
      |                ^
      |                :
./samples/SAFE/__tmp_f0ccec73.c:152:9: error: expected declaration or statement at end of input
  152 |         default
      |         ^~~~~~~
./samples/SAFE/__tmp_f0ccec73.c:152:9: error: expected declaration or statement at end of input
